Fixed .grid-full class usage. It was broken in the midst of code refactoring. Updated required gems and bi'd

--- a/stylesheets/_grid-coordinates.sass
+++ b/stylesheets/_grid-coordinates.sass
@@ -28,6 +28,7 @@ $support-legacy-grid-clearfix: true !default
     @include grid-block-base
   .grid-full
     @include grid-base($grid-columns)
+    @extend .grid-block
 
   // Loops
   @for $i from 1 through $grid-columns
